RESOLVED FIXED84286
Tables with just border-style set on the cells do not get a grid
https://bugs.webkit.org/show_bug.cgi?id=84286
Summary Tables with just border-style set on the cells do not get a grid
Robert Hogan
Reported 2012-04-18 14:54:45 PDT
Created attachment 137776 [details] Test Case - There should be a table! This is because every cell gets a zero-width border in createSharedCellStyle() if the table border is not explictly set. FF and Opera don't do this. We should probably not do anything to the cell's border if there is no table border explicitly set.
Attachments
Test Case - There should be a table! (942 bytes, text/html)
2012-04-18 14:54 PDT, Robert Hogan
no flags
Patch (989.40 KB, patch)
2012-07-19 13:35 PDT, Robert Hogan
jchaffraix: review+
Robert Hogan
Comment 1 2012-04-18 14:55:30 PDT
This is related to bug 83978 in a way, but should be fixed separately.
Robert Hogan
Comment 2 2012-07-19 13:35:03 PDT
Julien Chaffraix
Comment 3 2012-07-24 08:33:13 PDT
Comment on attachment 153336 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=153336&action=review > Source/WebCore/rendering/RenderTreeAsText.cpp:318 > + BorderValue prevBorder = o.style()->borderTop(); To be frank, our text border dumping is inadequate as it would dump several border configurations in the exact same way. Your change is definitely going in the right direction of dumping more rather than less so you can keep this change or just say that it should go in a list of stuff we will want to change during a let-s-break-the-baselines hackathlon.
Robert Hogan
Comment 4 2012-08-25 09:31:08 PDT
Note You need to log in before you can comment on or make changes to this bug.